ckan-bridge/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ckan-bridge
  namespace: ckan-bridge
  labels:
    app.kubernetes.io/name: ckan-bridge
spec:
  selector:
    app.kubernetes.io/name: ckan-bridge
  ports:
    - name: http
      port: 3001
      targetPort: http
  type: ClusterIP
